--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,1 +1,10 @@
-<p>page-not-found works!</p>
+<div class="d-flex align-items-center justify-content-center vh-100">
+  <div class="text-center">
+    <h1 class="display-1 fw-bold">404</h1>
+    <p class="fs-3"> <span class="text-danger">¡Ups! </span> P&aacute;gina no encontrada.</p>
+    <p class="lead">
+      La p&aacute;gina que est&aacute;s buscando no existe.
+    </p>
+    <a href="#" class="btn btn-primary">Regresar</a>
+  </div>
+</div>
