--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+:root {
+  --bs-body-font-family: "Inter", sans-serif !important;
+}
+
+@import 'node_modules/bootstrap/scss/bootstrap';
