--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
-
-
+// Importamos la font
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+//Agregamos custom colors a bootstrap
+@import '../node_modules/bootstrap/scss/functions';
+@import '../node_modules/bootstrap/scss/variables';
+
+
+$custom-colors:(
+  "yellow" : #D8FF00
+);
+
+$theme-colors: map-merge($theme-colors, $custom-colors);
 
 :root {
   --bs-body-font-family: "Inter", sans-serif !important;
+}
+
+body{
+  --bs-body-bg: #F9F9FB;
 }
 
 .container {
@@ -15,13 +28,16 @@
     padding: 0 15px;
   }
 }
-
 .form-control::placeholder {
   font-size: 1rem;
 }
-
 .form-control-lg::placeholder {
   font-size: 1rem;
 }
-
-@import 'node_modules/bootstrap/scss/bootstrap';
+.form-switch.custom-switch-color .form-check-input {
+  background-color: #9A9FA5;
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(255,255,255,1.0)'/></svg>");}
+.form-switch.custom-switch-color  .form-check-input:checked {
+  background-color: #000000
+}
+@import '../node_modules/bootstrap/scss/bootstrap';
