--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,5 +1,5 @@
 .container-form-login{
-  max-width: 482px;
+  max-width: 510px;
 }
 //btn iniciar sesion
 .custom-btn-log{
@@ -47,7 +47,7 @@
 }
 .social-media{
   .social-button {
-    width: 100px;
+    //width: 100px;
     height: 47px;
     font-size: 25px;
   }
@@ -62,6 +62,7 @@
   .google{
     border: 1px solid #cccccc;
     background-color: #ffffff;
+    color: #000000;
   }
 }
 .custom-dark-btn {
@@ -72,6 +73,16 @@
 @media (max-width: 390px) {
   .login-title {
     font-size: 1.5rem;
+  }
+}
+@media (max-width: 1200px) {
+  .social-button {
+    width: 100px;
+  }
+}
+@media (min-width: 1201px) {
+  .social-button {
+    width: 150px;
   }
 }
 
@@ -90,5 +101,8 @@
 @media (max-width: 1440px) {
   .mt-109px{
     margin-top: 109px;
+  }
+  .mb-32px {
+    margin-bottom: 32px;
   }
 }
