--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -5,6 +5,6 @@
     <p class="lead">
       La p&aacute;gina que est&aacute;s buscando no existe.
     </p>
-    <a href="#" class="btn btn-primary">Regresar</a>
+    <a routerLink="/home" class="btn btn-primary">Regresar</a>
   </div>
 </div>
