--- a/src/app/share/components/navbar/navbar.component.html
+++ b/src/app/share/components/navbar/navbar.component.html
@@ -84,7 +84,7 @@
           <fa-icon [icon]="search"></fa-icon>
         </span>
       </div>
-      <button type="button">Registra tu auto</button>
+      <button class="btn btn-light btn-lg" type="button">Registra tu auto</button>
       <div class="">
         <a class="position-relative icon-navbar">
           <fa-icon [icon]="bell"></fa-icon>
@@ -135,7 +135,7 @@
       <div class="flex-column">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0" *ngIf="!isLoginPage">
           <li class="nav-item">
-            <a class="nav-link" href="#">Ingresar</a>
+            <a class="nav-link" routerLink="{{routeLogin}}">Ingresar</a>
           </li>
         </ul>
       </div>
