--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 // Importamos la font
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
 
 //Agregamos custom colors a bootstrap
 @import '../node_modules/bootstrap/scss/functions';
