--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container h-100 d-flex align-items-center justify-content-center">
   <div class="row w-100">
     <div class="col-12 col-lg-6 d-none d-lg-flex align-items-center justify-content-center">
-      <img src="/assets/img/loing-img-1.png" class="img-fluid" alt="...">
+      <img ngSrc="{{imgWebLogin}}" class="img-fluid" alt="..." height="814" width="651">
     </div>
     <div class="col-12 col-lg-6 d-flex align-items-center justify-content-center">
       <div class="container-fluid container-form-login">
