add styles & banner home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,70 @@
-<div class="container">
-  <p>home works!</p>
-</div>
+<!-- Banner -->
+<section class="container-banner">
+  <img ngSrc="{{imgMobileHeader}}" alt="Logo" class="img-fluid" height="788" width="1298">
+</section>
+
+<section class="container-fluid category">
+  <p>Categor&iacute;a</p>
+  <app-card-categoria></app-card-categoria>
+</section>
+
+<!--<div class="container">-->
+
+  <!-- Categorías -->
+<!--  <div class="row mb-4 text-center">-->
+<!--    <div class="col">-->
+<!--      <h3>Encuentra la llanta adecuada para ti</h3>-->
+<!--      <div class="btn-group" role="group" aria-label="Categorías">-->
+<!--        <button type="button" class="btn btn-outline-primary">Llantas</button>-->
+<!--        <button type="button" class="btn btn-outline-primary">Frenos</button>-->
+<!--        <button type="button" class="btn btn-outline-primary">Rines</button>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+
+  <!-- Ofertas -->
+<!--  <div class="row mb-4">-->
+<!--    <div class="col-12">-->
+<!--      <h4>Ofertas</h4>-->
+<!--    </div>-->
+<!--    <div class="col-md-6 mb-3" *ngFor="let offer of offers">-->
+<!--      <div class="card">-->
+<!--        <img src="{{offer.image}}" class="card-img-top" alt="{{offer.title}}">-->
+<!--        <div class="card-body">-->
+<!--          <h5 class="card-title">{{offer.title}}</h5>-->
+<!--          <p class="card-text">SKU: {{offer.sku}}</p>-->
+<!--          <p class="card-text">{{offer.price | currency}}</p>-->
+<!--          <a href="#" class="btn btn-primary">Ver más</a>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+
+  <!-- Tiendas Oficiales -->
+<!--  <div class="row mb-4">-->
+<!--    <div class="col-12">-->
+<!--      <h4>Tiendas Oficiales</h4>-->
+<!--    </div>-->
+<!--    <div class="col-4" *ngFor="let store of stores">-->
+<!--      <img src="{{store.logo}}" class="img-fluid" alt="{{store.name}}">-->
+<!--    </div>-->
+<!--  </div>-->
+
+  <!-- Basado en tu última visita -->
+<!--  <div class="row">-->
+<!--    <div class="col-12">-->
+<!--      <h4>Basado en tu última visita</h4>-->
+<!--    </div>-->
+<!--    <div class="col-md-6 mb-3" *ngFor="let recent of recents">-->
+<!--      <div class="card">-->
+<!--        <img src="{{recent.image}}" class="card-img-top" alt="{{recent.title}}">-->
+<!--        <div class="card-body">-->
+<!--          <h5 class="card-title">{{recent.title}}</h5>-->
+<!--          <p class="card-text">SKU: {{recent.sku}}</p>-->
+<!--          <p class="card-text">{{recent.price | currency}}</p>-->
+<!--          <a href="#" class="btn btn-primary">Ver más</a>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
